# emoji-communicator-poc

./: README.md  pyproject.toml
data/: README.md
notebooks/: 01-examine-emojibase.ipynb
src/emoji/: assets.py
